# sabangnet-price-uploader

./: .gitignore  LICENSE  README.md  activate.bat  pyproject.toml  run.bat  run.py  setup.cfg
sabangnet_price_uploader/: log.py  main.py  settings.py  utils.py
